<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mnc.app.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mirage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bg_app" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_top" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/input_email_and_password"
                android:textColor="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/email"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/transparent"
                android:hint="@string/input_your_email"
                android:inputType="textEmailAddress"
                android:paddingVertical="12dp"
                android:text="@={vm.textEmail}"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/input_your_password"
                    android:inputType="textPassword"
                    android:paddingVertical="0dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:text="@={vm.textPassword}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@color/white"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/gray" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_sign_in"
            style="@style/ItemClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:onClick="@{()-> vm.clickSignIn()}"
            app:cardBackgroundColor="#686de0"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/container_input">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_in"
            app:layout_constraintTop_toTopOf="@id/button_sign_in">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mirage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_app" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_top" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>