<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.mnc.network.model.Auth" />

        <variable
            name="vm"
            type="com.mnc.app.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mirage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bg_app" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_top" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiper_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/finance"
                            android:textColor="@color/white_80"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/CircularItemClickable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_arrow_right" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_finance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_finance" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/transaction_history"
                            android:textColor="@color/white_80"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/CircularItemClickable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_arrow_right" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="4dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_recent_transactions" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/promo_for_you"
                            android:textColor="@color/white_80"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/CircularItemClickable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_arrow_right" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_promotion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_promo" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <FrameLayout
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mirage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_app" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_top" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white" />

        </FrameLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:text="@{`Hi, ` + item.name}"
                    android:textColor="@color/white"
                    tools:text="Hi, Anonymous" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/CircularItemClickable"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/circle_space_cadet"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_qr_code" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/CircularItemClickable"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_space_cadet"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_profile" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.appbar.MaterialToolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>